--- a/tex/MITF_MSE.tex
+++ b/tex/MITF_MSE.tex
@@ -64,8 +64,8 @@ The Macquarie Island Patagonian toothfish fishery, as well as the majority of th
 
 \begin{enumerate}
     \item Use current state of population from assessment to project forward
-    \item Calculate (constant) catch where relative SSB above 50 with probability 0.5 after 35 years
-    \item Calculate (constant) catch where relative SSB above 20\% with probability 0.9 (all years)
+    \item Calculate (constant) catch where relative SSB above 50\% unfished with probability 0.5 after 35 years
+    \item Calculate (constant) catch where relative SSB above 20\% unfished with probability 0.9 (all years)
     \item TAC is the \emph{lowest} of these two catches
 \end{enumerate}
 
@@ -74,7 +74,7 @@ The initial context of the rule could be characterised as follows: given sporadi
 \begin{itemize}
     \item TAC variability - there are no explicit constraints on the degree to which the TAC can vary from one decision to the next. Changes in excess of 20\% are quite common. This level of change is often hard-wired into other management procedures as a \emph{maximum} change and values well below this are considered good performance indicators
     \item Interaction with recent population dynamics - the constant catch, long-term projection nature of the CCAMLR rule has the tendency to amplify the effect of recent stock and fishery dynamics on the TAC
-    \item Overall it is \emph{very} sensitive to the overall scale of the population coming from the stock assessment - at least in the last three TAC decisions at Macquarie Island this relationship has been almost a one-to-one positive relationship
+    \item Overall it is \emph{very} sensitive to the overall scale of the population coming from the stock assessment - at least in the last three TAC decisions at Macquarie Island this relationship has been almost a one-to-one relationship
 \end{itemize}
 
 The last point has further implications that are hard to quantify in relation to the TAC, but very impactful in relation to the management process. If the management advice is so strongly dependent on the stock assessment it becomes scientifically and practically very difficult to explore development and adaption of the assessment where the implications for the management advice are not influencing the process - both consciously and subconsciously. As important is the fact that the CCAMLR rule has never really been fully tested in the Management Strategy Evaluation (MSE) sense, where the full feedback dynamics of the whole system are simulated. 
@@ -114,7 +114,7 @@ The population dynamics in the OMs we employ are year/age/length/sex/spatial in 
     \item Relative abundance indices: surveys, fleet-specific CPUE indices via either the multivariate or simpler log-normal distribution
 \end{itemize}
 
-For the simulation of the tag data the probabilities we model the tag release dynamics of each release ``event'' i.e. all the releases in a given year, sex, age class and spatial region. The probability of recapturing a tag depends on tag shedding and mortality, natural mortality, the harvest rate, and the spatial transition matrix. Though the underlying generating distribution is assumed to be a Dirichlet-multinomial we use the conditional beta-binomial generating method. This is because as we move forward in time we are releasing tags in a given release ``cohort'', recapturing them, using the data in a TAC decision year but also recapturing the same release further ahead in time. So we cannot simply use the Dirichlet-multinomial distribution to simulate the data - instead we use the beta-binomial distribution to simulate recaptures in the given time period, and as we project forward in time we use the conditional sampling approach to simulate future recaptures in the same release group. This preserves both the marginal distributions of each possible recapture event, as well as the implicit negative correlation in the multinomial (more/less recaptures ``early'' means less/more recaptures probable ``later''). The tag release age distribution is statistically inferred from the actual size distribution of animals at Macquarie Island (in this case) using the length-at-age distribution (by sex), and the number of releases is dictated by an assumed tag-per-tonne release rate, the catches by region, and the estimated sex and age distribution of releases.
+For the simulation of the tag data the probabilities we model the tag release dynamics of each release ``event'' i.e. all the releases in a given year, sex, age class and spatial region. The probability of recapturing a tag depends on tag shedding and mortality, natural mortality, the harvest rate, and the spatial transition matrix. Though the underlying generating distribution is assumed to be a Dirichlet-multinomial we use the conditional beta-binomial generating method. This is because as we move forward in time we are releasing tags in a given release ``cohort'', recapturing them, using the data in a TAC decision year but also recapturing the same releases further ahead in time. So we cannot simply use the Dirichlet-multinomial distribution to simulate the data - instead we use the beta-binomial distribution to simulate recaptures in the given time period, and as we project forward in time we use the conditional sampling approach to simulate future recaptures in the same release group. This preserves both the marginal distributions of each possible recapture event, as well as the implicit negative correlation in the multinomial (more/less recaptures ``early'' means less/more recaptures probable ``later''). The tag release age distribution is statistically inferred from the actual size distribution of animals at Macquarie Island (in this case) using the length-at-age distribution (by sex), and the number of releases is dictated by an assumed tag-per-tonne release rate, the catches by region, and the estimated sex and age distribution of releases.
 
 \subsection{Mark-recapture estimators}
 
@@ -288,7 +288,7 @@ Firstly, the points above suggest these types of estimators are going to potenti
 
 \section{Discussion}
 
-For both the Macquarie Island and HIMI Patagonian toothfish fisheries there  has been a number of years of discussion about what might replace the CCAMLR rule as the primary management advice instrument. It has been considered best practice to use the MSE process to develop and test alternative management strategies for a number of years \cite{mse} and in this paper we performed some initial exploratory work to develop and test candidate Management Procedures using the tagging data given this is the major data source for Macquarie Island.In this work we do not use the complex integrated stock assessment as the data analysis method; we use a simplified suite of mark-recapture estimators to obtain harvest rate estimates to use in the Harvest Control Rules. We could, in principle, use the full stock assessment as the analysis method but there are several reasons why we either don't need to or might not want to:
+For both the Macquarie Island and HIMI Patagonian toothfish fisheries there  has been a number of years of discussion about what might replace the CCAMLR rule as the primary management advice instrument. It has been considered best practice to use the MSE process to develop and test alternative management strategies for a number of years \cite{mse} and in this paper we performed some initial exploratory work to develop and test candidate Management Procedures using the tagging data given this is the major data source for Macquarie Island. In this work we do not use the complex integrated stock assessment as the data analysis method; we use a simplified suite of mark-recapture estimators to obtain harvest rate estimates to use in the Harvest Control Rules. We could, in principle, use the full stock assessment as the analysis method but there are several reasons why we either don't need to or might not want to:
 
 \begin{enumerate}
     \item Complexity: when testing methods from simple empirical MPs all the way to integrated stock assessment models the most complicated model doesn't always perform best. In fact, there often appears to be a range of complexity between the simplest empirical rules and the assessment that yields as good as if not better performance \cite{mse,iwc,sbtmp,mprev}. Additionally, with complicated assessments, such as those for toothfish \textit{spp.}, understanding and explaining how new data and model changes affect outcomes can be very hard to do definitively. Simpler analysis methods are far more amenable to stakeholder understanding of why an MP makes a given decision
@@ -298,7 +298,7 @@ For both the Macquarie Island and HIMI Patagonian toothfish fisheries there  has
 
 To develop the Operating Models required for the MSE testing process we generalised the underlying population and fishery models used in the stock assessment \cite{misa}. We have sex/age/spatial/size structured dynamics as well as the ability to explore a number of stage (age/sex) or time varying processes for growth, natural mortality, migration, selectivity and recruitment. Given we do not use effort or CPUE in the assessment there is less of a focus on fleet dynamic capability besides the choice of where to fish in a given season. We are able to generate statistically well-defined observations such as (spatiotemporal) mark-recapture data, length/age composition, age-given-length data, and survey abundance indices. The models are custom written in the \texttt{R} statistical language and are highly extendable in relation to alternative hypotheses about the relevant processes - both historical and in the future.
 
-Given this is the first major piece of fully realised MSE work the SARAG has seen in relation to alternatives to the CCAMLR rule, we have included only a Macquarie Island-like simple example. The aim of the work was to set the scene for how we propose to approach the development of new management approaches. The project currently envisages a two-step/two-year process whereby the initial work will be presented and discussed at this meeting of the SARAG. Based on feedback and suggestions at this meeting we would then develop a suite of suitable OMs and candidate MPs for the actual Macquarie Island fishery and report back to the first SARAG meeting in 2025.
+Given this is the first major piece of fully realised MSE work the SARAG has seen in relation to alternatives to the CCAMLR rule, we have included only a Macquarie Island-like simple example. The aim of the work was to set the scene for how we propose to develop new management approaches. The project currently envisages a two-step/two-year process whereby the initial work will be presented and discussed at this meeting of the SARAG. Based on feedback and suggestions at this meeting we would then develop a suite of suitable OMs and candidate MPs for the actual Macquarie Island fishery and report back to the first SARAG meeting in 2025.
 
 For the simple Macquarie-like MSE example the OM began the population in unexploited equilibrium, with 20 years of fishing at the fixed effort (harvest rate) level that would eventually reduce the population to 50\% of the unfished level. After the first ten years of fishing tags were released into the two spatial regions. After the initial 20 years candidate MPs were then implemented that use the tagging data and make a TAC decision every 5 years with 20 years of projections into the future. Each of the two candidate MPs (one spatially explicitly, one using spatially aggregated tagging data) used a relatively simple target harvest rate HCR and were tuned (using the target parameter) to achieve a median relative (female) SSB of 50\% of the unfished level by the final year. The only additional constraint in the candidate MPs was that the maximum percentage change in TAC - up or down - was 20\%.
 
